src/App.css
/* Bootstrap CSS is now included from node_modules in index.tsx */

.clean-link {
  text-decoration: none;
  color: inherit;
}
.clean-link:hover {
  color: inherit;
  transform: scale(0.1rem);
}

.logo-link {
  /* extend .clean-link */
  text-decoration: none;
  color: inherit;
  padding: 0 1rem 0 1rem;
}

.app-container-div {
  height: 100%;
  border-width: 0;
  border-style: double;
  border-color: cornsilk;
  border-top-width: 0.5rem;
  padding: 1rem 10% 5rem 10%;
  /* background-color: lightgoldenrodyellow; */
}

.spin {
  animation: rotation 3s infinite linear;
}

.spinner-svg {
  /* extend .spin */
  animation: rotation 3s infinite linear;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

.recipe-card-img {
  height: 150px;
  object-fit: cover;
}

.recipe-card {
  overflow: hidden;
  margin: 0.5rem 0;
}

.recipe-card-body {
  height: 50px;
}

.recipe-card-title {
  display: block;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.col {
  padding: 0 0.2rem;
}

.justify-content-end {
  justify-content: end;
}

html,
body {
  height: 100%;
}

